--- a/konkatu-app/package.json
+++ b/konkatu-app/package.json
@@ -1,10 +1,9 @@
 {
   "name": "Pro3",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/nodemon app.js"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +20,7 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "nodemon": "^2.0.4"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
