heroku up sippai

--- a/konkatu-app/package.json
+++ b/konkatu-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Pro3",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "nodemon app.js"
   },
