--- a/konkatu-app/package.json
+++ b/konkatu-app/package.json
@@ -2,7 +2,7 @@
   "name": "test_app",
   "version": "1.0.0",
   "description": "\"node.js+Express+Socket.io\"",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
