--- a/konkatu-app/package.json
+++ b/konkatu-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test_app",
+  "name": "konkatu-app",
   "version": "1.0.0",
   "description": "\"node.js+Express+Socket.io\"",
   "main": "index.js",
